# datascientist-politicalparties-python

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run_analysis.py
src/: run_analysis.py
src/political_party_analysis/: dim_reducer.py  estimator.py  loader.py  visualization.py
tests/: test_data_dim_reducer.py  test_data_loader.py  test_version.py
