[tool.poetry]
name = "political_party_analysis"
version = "0.2.0"
description = ""
authors = ["Iswariya Manivannan <iswariya.m17@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
mypy = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
