[tool.poetry]
name = "political_party_analysis"
version = "0.2.0"
description = "A package for analysing results of the Chapel Hill Expert Survey dataset"
authors = ["Iswariya Manivannan <iswariya.m17@gmail.com>"]

[tool.poetry.dependencies]
matplotlib = "^3.0.0"
numpy = "^2.0.0"
pandas = "^2.0.0"
python = ">=3.9,<3.14"
scikit-learn = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
