[project]
name = "political_party_analysis"
version = "0.2.0"
description = "A package for analysing results of the Chapel Hill Expert Survey dataset"
requires-python = ">=3.11,<3.14"
dependencies = [
    "matplotlib >= 3.0, < 4.0",
    "numpy >= 2.0, < 3.0",
    "pandas >= 2.0, < 3.0",
    "scikit-learn >= 1.0, < 2.0"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
